test/tests/optics/overlapping.golden

test\tests\optics\overlapping.hs:31:5: error:
    • set: cannot create product setter.
      Setters 
        'fir-0.0.1.0:Control.Type.Optic.Name_ "field_0"
      and 
        'fir-0.0.1.0:Control.Type.Optic.Index_ 0
      are not disjoint.
    • In a stmt of a 'do' block:
        assign
          @(Name "struct" :.: (Name "field_0" :*: Index 0))
          (Lit (4 :& 5 :& End))
      In the third argument of ‘entryPoint’, namely
        ‘do def
              @"struct"
              @RW
              @(Struct '["field_0" :-> Float, "field_1" :-> Bool])
              (Lit (3 :& True :& End))
            assign
              @(Name "struct" :.: (Name "field_0" :*: Index 0))
              (Lit (4 :& 5 :& End))’
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do def
               @"struct"
               @RW
               @(Struct '["field_0" :-> Float, "field_1" :-> Bool])
               (Lit (3 :& True :& End))
             assign
               @(Name "struct" :.: (Name "field_0" :*: Index 0))
               (Lit (4 :& 5 :& End))
   |
31 |     assign @(Name "struct" :.: (Name "field_0" :*: Index 0)) ( Lit ( 4 :& 5 :& End ) )
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
